* MainWindow.cs: Testing the new path drawing capabilities… And they   work as expected (as expected ! ;)
* PreferencesPanel.cs: Testing the new "Cocoa" PropertyGrid
  implementation. Not very useful but promising.

* finalize.sh: bugfix

* System.MacOS.csproj: 

* SafeNativeMethods.CoreGraphics.cs: New native methods + little code
  reorganization

* Segment.cs:
* SegmentedCell.cs: Updated the ownership code to the same pattern as
  in other classes.

* TableViewBase.cs: Better column collection, but still not fully
  functional.

* TableColumn.cs: Starting a really useful implementation.
Added most members (width & co still missing)

* ColumnSizingOptions.cs: Enum for column sizing in TableViews. Not
  used yet.

* View.cs: Added localized exception text

* Cell.cs: Made the cell value working and much more useful ! :)

* GraphicsContext.cs: Bugfix + Lot of path goodness

* CommonSelectors.cs: New selectors added.

* PropertyGrid.cs: Making it a good test case for OutlineView.
Now correctly embeds the view in a ScrollView.
Shows basic object properties.

* OutlineViewBase.cs: Migrated to the new automatic bridging feature
Added support for multiple columns
Began migrating things to TableView when they should be there

* DelayCreatedNativeObject.cs: !!! This is a template file !!!

* ObjectiveC.Bridging.cs: [Semi-Useless] Can now generate cool names
  for nested classes: I think CLROutlineViewDelegate will look better
  than CLRDelegate450 ;)
Added *the* line and a reminder to do some work on the bridging
  engine.
This (commented) line is for storing managed objects as GCHandle(s)
  inside native objects. This should bring better native interop once
  implemented.

* SafeNativeMethods.cs: New native methods for objective-C runtime
  interop.
I don't know how I missed the ivar_GetOffset the first time I looked
  into these… T_T
Now most of the things needed for a better bridge engine are here…

* NativeObject.cs: !!! Template file !!!

* ErrorMessages.resx:
* Error

--- a/Monoxide/System.MacOS/System.MacOS.csproj
+++ b/Monoxide/System.MacOS/System.MacOS.csproj
@@ -178,6 +178,13 @@
     <Compile Include="SafeNativeMethods.CoreServices.cs" />
     <Compile Include="NSDictionary.cs" />
     <Compile Include="OSVersion.cs" />
+    <Compile Include="AppKit\ColumnSizingOptions.cs" />
+    <Compile Include="CoreGraphics\TextDrawingMode.cs" />
+    <Compile Include="CoreGraphics\LineJoin.cs" />
+    <Compile Include="CoreGraphics\InterpolationQuality.cs" />
+    <Compile Include="CoreGraphics\LineCap.cs" />
+    <Compile Include="CoreGraphics\TextEncoding.cs" />
+    <Compile Include="CoreGraphics\PathDrawingMode.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AppKit\Commands.fr.resx" />
@@ -207,4 +214,12 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\..\Volumes\Data\Users\Fabien\Documents\MonoDevelop Projects\Monoxide\System.MacOS\DelayCreatedNativeObject.cs">
+      <Link>DelayCreatedNativeObject.cs</Link>
+    </None>
+    <None Include="..\..\..\..\..\..\Volumes\Data\Users\Fabien\Documents\MonoDevelop Projects\Monoxide\System.MacOS\NativeObject.cs">
+      <Link>NativeObject.cs</Link>
+    </None>
+  </ItemGroup>
 </Project>
